--- a/project/main/templates/main/contacts.html
+++ b/project/main/templates/main/contacts.html
@@ -2,6 +2,6 @@
 <div class="features">
   <h1>Контакты</h1>
   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste deleniti quibusdam at placeat, odit voluptatem! Amet, perspiciatis eligendi commodi rerum reiciendis sapiente sequi repellat itaque, blanditiis quae quis ut perferendis.</p>
-  <button class="btn btn-info">Нажми меня</button>
+  <a href="{% url 'news_home' %}" class="btn btn-info">На страницу Новости</a>
 </div>
 {% endblock %}
