--- a/project/news/templates/news/create.html
+++ b/project/news/templates/news/create.html
@@ -1,4 +1,5 @@
-{% extends 'main/layout.html' %} {% block title %} Форма по добавлению статьи {% endblock %} {% block content %}
+{% extends 'main/layout.html' %} 
+{% block title %} Форма по добавлению статьи {% endblock %} {% block content %}
 <div class="features">
   <h1>Форма по добавлению статьи</h1>
 
