--- a/project/news/templates/news/news_home.html
+++ b/project/news/templates/news/news_home.html
@@ -1,11 +1,12 @@
 {% extends 'main/layout.html' %} {% block title %} Новости {% endblock %} {% block content %}
-<div class="features">
+<div class="features simplebar-content-wrapper" data-simplebar>
   <h1>Новости на сайте</h1>
 
   {% if news%} {% for el in news %}
   <div class="alert alert-warning">
     <h3>{{ el.title }}</h3>
     <p>{{ el.anons }}</p>
+    <a href="{% url 'news-detail' el.id %}" class="btn btn-warning">Перейти к статье</a>
   </div>
   {%endfor%}
   
