--- a/project/main/templates/main/about.html
+++ b/project/main/templates/main/about.html
@@ -2,6 +2,6 @@
 <div class="features">
   <h1>Про нас</h1>
   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste deleniti quibusdam at placeat, odit voluptatem! Amet, perspiciatis eligendi commodi rerum reiciendis sapiente sequi repellat itaque, blanditiis quae quis ut perferendis.</p>
-  <button class="btn btn-danger">Нажми меня</button>
+  <a href="{% url 'contacts' %}" class="btn btn-danger">На страницу Контакты</a>
 </div>
 {% endblock %}
