--- a/project/main/templates/main/layout.html
+++ b/project/main/templates/main/layout.html
@@ -8,6 +8,8 @@
     <title>{% block title %} {% endblock %}</title>
     <link rel="icon" href="{% static 'main/img/youtube.svg' %}" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://unpkg.com/simplebar@latest/dist/simplebar.css" />
+    <script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
     <link rel="stylesheet" href="{% static 'main/css/main.css' %}" />
   </head>
   <body>
@@ -25,11 +27,11 @@
           <a href="{% url 'about' %}"
             ><li><img src="{% static 'main/img/file.svg' %}" alt="file" class="small-img" /> Про нас</li>
           </a>
-          <a href="{% url 'news_home' %}"
-            ><li><img src="{% static 'main/img/news.svg' %}" alt="book" class="small-img" /> Новости</li>
-          </a>
           <a href="{% url 'contacts' %}"
             ><li><img src="{% static 'main/img/book.svg' %}" alt="book" class="small-img" /> Контакты</li>
+          </a>
+          <a href="{% url 'news_home' %}"
+            ><li><img src="{% static 'main/img/news.svg' %}" alt="book" class="small-img" /> Новости</li>
           </a>
           <a href="{% url 'create' %}">
             <li><button class="btn btn-info">Добавить запись</button></li>
